src/App.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); 
@import 'bootstrap/scss/bootstrap';


* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }
  
  body {
    font-family: 'Poppins', sans-serif;
    background-color: white;
    color: black;
  }

  p, h3 {
    color: black;
  }

  .recipeCard {
   margin-left: 2rem;
    //height: 75vh;
    width: 75vw;
    height: auto;
    //border-radius: 2rem;
    border: none;
    //padding-right: 2rem;
    //overflow: hidden;
    position: relative;
    color: white;
    //border: 1px solid black;
  
}

.card-img {
  background-color: #fff;
  border-radius: 2rem;
}

h1{
  font-size: 2em;
}



form {
  display: flex;
  flex-direction: column;
  width: 80vw;

}

.recipeCards {

    margin-left: 2rem;
     height: 50vh;
     width: auto;
     border-radius: 2rem;
     //padding-right: 2rem;
     overflow: hidden;
     position: relative;
     color: white;
     //border: 1px solid black;
   
 
}

.recipeCard img, .recipeCards img {
  
    
    position: absolute;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;

}

/* .recipeCard p {
  
    position: absolute;
    z-index: 10;
    left: 50%;
    bottom: 0%;
    transform: translate(-50%, 0%);
    color: white;
    width: 100%;
    text-align: center;
    font-weight: 600;
    font-size: 2rem;
    height: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
} */

/* .recipes a {

  text-decoration: none;
  padding: 0.5rem;
  border: 1px solid black;
  color: black;
  cursor: pointer;
  background-color: white;
  border-radius: 2rem;
  margin-top: 2rem;

}
 */


h2 {
  margin: 1.5rem;
  color: black;
}

.btn {
  //margin: 1.5rem;
  //position: absolute;
  //z-index: 10;
  cursor: pointer;
  background-color: palevioletred;
  color:#fff;
}

.back-btn {
  margin: 3rem;
  background-color: palevioletred;
  color: #fff;
} 

.form-header {
  margin-bottom: 20px;
}

.form-container {
  display: flex;
  flex-direction: column;
  max-width: 400px;
  margin: 0 auto;
  padding: 20px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.form-input {
  margin-bottom: 10px;
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.form-submit-btn {
  padding: 10px 20px;
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: 10px 20px;
  font-size: 16px;

}

.form-alert {
  margin-top: 20px;
}

.form-input {
  white-space: pre-wrap;
}



.hero-section {
  background:
  linear-gradient(rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.8)),
  url('./assets/hero-bg.jpg');

  background-size: cover;

  height: 199px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  text-align: center;
}

.hero-section h1 {
  font-size: 2rem;
  font-weight: bold;
  padding: 2rem;
}

.alert {
  background-color: white;
}

/* Add these styles to your CSS file or inline styles */
.form-header {
  max-width: 600px;
  margin: 0 auto;
  padding: 20px;
}

.form-container {
  display: flex;
  flex-direction: column;
}

.form-input {
  margin-bottom: 10px;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  font-size: 16px;
}
img.card-img-top {
 height: 200px;
  width: 250px;
}




/*  media queries for responsiveness */
@media (min-width: 768px) {
  /* Desktop view */
  .form-container {
    flex-direction: row;
    flex-wrap: wrap;
  }

  .form-input {
    flex: 1;
    margin: 0 5px;
  }

  .btn {
    flex: 1;
  }
}

@media (max-width: 566px) {
  img.card-img-top {
    width: 100%;
    height: auto;
    max-height: 800px;
  }
  }

